{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 19,
  "lineage": "c4231ec2-eb32-c20a-3d30-63c660421468",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511572627495:internet-gateway/igw-09ff7c1b92497341e",
            "id": "igw-09ff7c1b92497341e",
            "owner_id": "511572627495",
            "tags": {
              "Name": "aruna003 VPC IGW"
            },
            "tags_all": {
              "Name": "aruna003 VPC IGW"
            },
            "vpc_id": "vpc-0ee4b33ac35309367"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0351d68127236a3fc",
            "network_interface_id": "eni-0beab665555b18169",
            "private_ip": "10.20.3.249",
            "subnet_id": "subnet-075abe7043f02e5ef",
            "tags": {
              "Name": "aruna003 VPC NGW"
            },
            "tags_all": {
              "Name": "aruna003 VPC NGW"
            }
          },
          "dependencies": [
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0b9e852e18394dd8e",
            "network_interface_id": "eni-0d988c61ceeb1b67a",
            "private_ip": "10.20.4.67",
            "subnet_id": "subnet-0f4d5c6b229bfa3cb",
            "tags": {
              "Name": "aruna003 VPC NGW"
            },
            "tags_all": {
              "Name": "aruna003 VPC NGW"
            }
          },
          "dependencies": [
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511572627495:route-table/rtb-0a6a279b0c2b21685",
            "id": "rtb-0a6a279b0c2b21685",
            "owner_id": "511572627495",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0351d68127236a3fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-0ee4b33ac35309367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_subnet.private_subnet",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511572627495:route-table/rtb-0674bf9f39bd4bb35",
            "id": "rtb-0674bf9f39bd4bb35",
            "owner_id": "511572627495",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b9e852e18394dd8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-0ee4b33ac35309367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_subnet.private_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511572627495:route-table/rtb-04a3bb41d63b9b5d9",
            "id": "rtb-04a3bb41d63b9b5d9",
            "owner_id": "511572627495",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ff7c1b92497341e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aruna003 Public Subnet RT"
            },
            "tags_all": {
              "Name": "aruna003 Public Subnet RT"
            },
            "vpc_id": "vpc-0ee4b33ac35309367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eca77757eb56fa5",
            "route_table_id": "rtb-0a6a279b0c2b21685",
            "subnet_id": "subnet-075abe7043f02e5ef"
          },
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3704eb91c7987fa",
            "route_table_id": "rtb-0674bf9f39bd4bb35",
            "subnet_id": "subnet-0f4d5c6b229bfa3cb"
          },
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c62905166b827b3",
            "route_table_id": "rtb-04a3bb41d63b9b5d9",
            "subnet_id": "subnet-0f7c24a22f09c27fb"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.default",
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f272f06d7b33b1a7",
            "route_table_id": "rtb-04a3bb41d63b9b5d9",
            "subnet_id": "subnet-08a6b8de1a8c4e84a"
          },
          "dependencies": [
            "aws_vpc.default",
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511572627495:subnet/subnet-075abe7043f02e5ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-075abe7043f02e5ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511572627495",
            "tags": {
              "Name": "aruna003-private-Subnet-1"
            },
            "tags_all": {
              "Name": "aruna003-private-Subnet-1"
            },
            "vpc_id": "vpc-0ee4b33ac35309367"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511572627495:subnet/subnet-0f4d5c6b229bfa3cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-0f4d5c6b229bfa3cb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511572627495",
            "tags": {
              "Name": "aruna003-private-Subnet-2"
            },
            "tags_all": {
              "Name": "aruna003-private-Subnet-2"
            },
            "vpc_id": "vpc-0ee4b33ac35309367"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511572627495:subnet/subnet-0f7c24a22f09c27fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0f7c24a22f09c27fb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511572627495",
            "tags": {
              "Name": "aruna003-public-Subnet-1"
            },
            "tags_all": {
              "Name": "aruna003-public-Subnet-1"
            },
            "vpc_id": "vpc-0ee4b33ac35309367"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511572627495:subnet/subnet-08a6b8de1a8c4e84a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-08a6b8de1a8c4e84a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511572627495",
            "tags": {
              "Name": "aruna003-public-Subnet-2"
            },
            "tags_all": {
              "Name": "aruna003-public-Subnet-2"
            },
            "vpc_id": "vpc-0ee4b33ac35309367"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511572627495:vpc/vpc-0ee4b33ac35309367",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-065548f32d5178093",
            "default_route_table_id": "rtb-046fce22cc9795521",
            "default_security_group_id": "sg-0f9376333e9726d02",
            "dhcp_options_id": "dopt-b7c89fcd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ee4b33ac35309367",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-046fce22cc9795521",
            "owner_id": "511572627495",
            "tags": {
              "Name": "aruna003-vpc"
            },
            "tags_all": {
              "Name": "aruna003-vpc"
            }
          }
        }
      ]
    }
  ]
}